--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 
 <body>
+
+    <!-- HEADER -->
+    <header class="header"></header>
+
+    <!-- MAIN -->
+    <main class="main"></main>
+
+    <!-- FOOTER -->
+    <footer class="footer"></footer>
+
+    <!-- JAVASCRIPT -->
+    <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 
