--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <footer class="footer"></footer>
 
     <!-- JAVASCRIPT -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./js/movies-new.js"></script>
     <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="./js/script.js"></script>
 
